Fix word-wrap for any link

--- a/themes/terminal-bio/static/css/style.css
+++ b/themes/terminal-bio/static/css/style.css
@@ -1,4 +1,4 @@
-.footnotes {
+a {
     word-wrap: break-word;
 }
 
